--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           path: ~/.m2/repository
           key: ${{ env.ACTION_CACHE_VERSION }}-${{ runner.os }}-maven-${{ hashFiles('**/project.clj') }}
           restore-keys: |
-            ${{ env.ACTION_CACHE_VERSION }}-${{ rnner.os }}-maven-
+            ${{ env.ACTION_CACHE_VERSION }}-${{ runner.os }}-maven-
       - name: Prepare java
         uses: actions/setup-java@v2
         with:
