add trojan detection

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install clojure tools
         uses: DeLaGuardo/setup-clojure@3.5
         with:
-          lein: 2.9.7
+          lein: 2.9.8
+      # Run trojansourcedetector
+      - name: Trojan Source Detector
+        uses: haveyoudebuggedit/trojansourcedetector@v1
       - name: Run tests
         run: lein all test
