--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,33 @@ on:
 
 env:
   #bump to clear caches
-  ACTION_CACHE_VERSION: 'v1'
+  ACTION_CACHE_VERSION: 'v2'
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ env.ACTION_CACHE_VERSION }}-${{ runner.os }}-maven-${{ hashFiles('**/project.clj') }}
+          restore-keys: |
+            ${{ env.ACTION_CACHE_VERSION }}-${{ runner.os }}-maven-
+      - name: Prepare java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: 11
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@3.5
+        with:
+          lein: 2.9.8
+      - name: Warm deps cache
+        run: lein all deps
   lint:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -37,6 +60,7 @@ jobs:
       - name: Run Eastwood
         run: lein eastwood
   test:
+    needs: setup
     strategy:
       matrix:
         java: ['8', '11', '17']
